--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ volume: 19
 month: 0
 address: Budapest, Hungary
 year: '2011'
+start: 2011-06-09
+end: 2011-06-11
+published: 2011-12-21
 shortname: COLT
 sections:
 - name: preface
