Update with bitex2yaml script

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ github:
   edit: true
   repository: v19
 conference:
-  name: 
+  name: Proceedings of the 24th Annual Conference on Learning Theory
   url: 
   location: Budapest, Hungary
   dates:
