--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-# Site settings
-# Auto generated from v19.bib
 ---
 booktitle: Proceedings of the 24th Annual Conference on Learning Theory
 publisher: JMLR Workshop and Conference Proceedings
@@ -16,6 +14,7 @@ sections:
 - name: default
   title: Accepted Papers
 layout: proceedings
+series: Proceedings of Machine Learning Research
 id: KakadeCOLT2011
 abstract: ''
 editor:
@@ -47,3 +46,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+# Site settings
+# Auto generated from v19.bib
