--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,8 @@ github:
   edit: true
   repository: v19
 bibtex_copy: true
+endnote_copy: true
+apa_copy: true
 email: ''
 conference:
   name: Proceedings of the 24th Annual Conference on Learning Theory
