Add supplementary material and multiple cycles with issues.

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ id: KakadeCOLT2011
 abstract: ''
 tex_title: 
 title: Proceedings of Machine Learning Research
+cycles: false
 editor:
 - given: Sham M.
   family: Kakade
@@ -46,9 +47,12 @@ permalink: "/:title.html"
 github:
   edit: true
   repository: v19
-bibtex_copy: true
-endnote_copy: true
-apa_copy: true
+display:
+  copy_button:
+    bibtex: true
+    endnote: true
+    apa: true
+  comments: false
 email: ''
 conference:
   name: Proceedings of the 24th Annual Conference on Learning Theory
