--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,13 @@ sections:
 layout: proceedings
 series: Proceedings of Machine Learning Research
 id: KakadeCOLT2011
-abstract: ''
-tex_title: 
-title: Proceedings of Machine Learning Research
 cycles: false
 editor:
 - given: Sham M.
   family: Kakade
 - given: Ulrike
   family: von Luxburg
+title: Proceedings of Machine Learning Research
 description: |
   Proceedings of the 24th Annual Conference on Learning Theory
     Held in Budapest, Hungary on 09-11 June 2011
@@ -40,7 +38,7 @@ description: |
 date_str: 09--11 Jun
 url: http://proceedings.mlr.press
 baseurl: "/v19"
-twitter_username: mlresearch
+twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
 permalink: "/:title.html"
@@ -52,6 +50,7 @@ display:
     bibtex: true
     endnote: true
     apa: true
+    ris: true
   comments: false
 email: ''
 conference:
@@ -67,3 +66,4 @@ analytics:
     tracking_id: UA-92432422-1
 # Site settings
 # Auto generated from v19.bib
+---
