--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ---
 booktitle: Proceedings of the 24th Annual Conference on Learning Theory
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 publisher: JMLR Workshop and Conference Proceedings
 volume: 19
 month: 0
@@ -44,6 +45,10 @@ baseurl: "/v19"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -74,6 +79,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
