--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ description: |
   Series Editors:
     Neil D. Lawrence
 date_str: '09--11 Jun'
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 baseurl: "/v19"
